--- a/Abbohubb/static/styles.css
+++ b/Abbohubb/static/styles.css
@@ -288,7 +288,7 @@ header p {
 .abonnementen-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
 }
 
 .categorie {
@@ -720,7 +720,7 @@ header p {
   .abonnementen-lijst {
     display: flex;
     justify-content: center;
-    align-items: center;`
+    align-items: center;
     
   }
   
@@ -930,5 +930,6 @@ header p {
   .categorie-scroll-container {
     padding-left: 5px; /* of een andere gewenste waarde */
     padding-right: 10px;
+    
   }
 }
