--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -7,6 +7,15 @@
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>AbboHub - Vind en vergelijk abonnementen</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-96HGGXSKDW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-96HGGXSKDW');
+</script>
 </head>
 <body>
     <!-- HEADER -->
