--- a/Abbohubb/templates/cookie-banner.html
+++ b/Abbohubb/templates/cookie-banner.html
@@ -98,6 +98,10 @@
 
         loadGoogleAnalytics();
 
+        window.dataLayer = window.dataLayer || [];
+window.dataLayer.push({ event: 'consent_given' });
+
+
         // Stuur trigger naar Google Tag Manager
         window.dataLayer = window.dataLayer || [];
         window.dataLayer.push({ 'event': 'consent_given' });
@@ -162,6 +166,13 @@
             enableCookies();
         }
     };
+    function trackMeerInfo(tegelNaam) {
+  window.dataLayer = window.dataLayer || [];
+  window.dataLayer.push({
+    event: 'klik_meer_info',
+    tegel: tegelNaam
+  });
+}
 </script>
     </body>
     </html>
