--- a/Abbohubb/templates/index.html
+++ b/Abbohubb/templates/index.html
@@ -453,7 +453,15 @@
                 });
               });
             </script>
-                        
+            <script>
+              function trackMeerInfo(tegelNaam) {
+                window.dataLayer = window.dataLayer || [];
+                window.dataLayer.push({
+                  event: 'klik_meer_info',
+                  tegel: tegelNaam
+                });
+              }
+              </script>            
             </body>
 </html>
 
