--- a/Abbohubb/templates/over-abbohub.html
+++ b/Abbohubb/templates/over-abbohub.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>Wat is AbboHub?</h2>
-            <p>AbboHub is een innovatief platform waarmee consumenten eenvoudig abonnementen kunnen vinden, vergelijken en beheren. Van streamingdiensten en mobiele abonnementen tot tijdschriften en sportlidmaatschappen, wij helpen je om de beste keuze te maken.</p>
+            <p>AbboHub is een innovatief platform waarmee consumenten eenvoudig abonnementen kunnen vinden, vergelijken en beheren. Wij helpen je om de beste keuze te maken.</p>
         </section>
         <section>
             <h2>Onze Missie</h2>
