--- a/Abbohubb/templates/abonnement_reviews.html
+++ b/Abbohubb/templates/abonnement_reviews.html
@@ -199,7 +199,7 @@
         <tr>
           <th>Bezoek Website</th>
           <td>
-            <a href="{{ abonnement.url }}" target="_blank" rel="noopener noreferrer" class="visit-website">
+            <a href="{{ abonnement.url }}" target="_blank" rel="noopener noreferrer" class="visit-website" data-abonnement="{{ abonnement.naam }}">
               Bezoek website
             </a>
           </td>
@@ -282,5 +282,21 @@
     <!-- Terug naar overzicht link -->
     <a href="{{ url_for('index') }}" class="back-link">&larr; Terug naar overzicht</a>
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      document.querySelectorAll(".visit-website").forEach(function (link) {
+        link.addEventListener("click", function () {
+          const abonnement = link.dataset.abonnement || "onbekend";
+  
+          gtag('event', 'klik_naar_aanbieder', {
+            'event_category': 'Uitgaande klik',
+            'event_label': abonnement,
+            'pagina': window.location.pathname
+          });
+        });
+      });
+    });
+  </script>  
 </body>
 </html>
+
